# snap

./: CMakeLists.txt
cmake/: strip.cmake  utility.cmake
glib-core/: CMakeLists.txt  glib-core.cmake
snap-core/: CMakeLists.txt  snap-core.cmake
